--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 <h1>Welcome to Teamder</h1>
 
-<p>Click <a href = "https://teamder.auth.us-east-1.amazoncognito.com/login?client_id=5an2n7mfoe4ar3vjv2mi4uctbs&response_type=token&scope=openid+phone&redirect_uri=https://yuxluo.github.io/teamder/success.html">here</a> to sign in or sign up</p>
-
+<p>Click <a href = "https://teamderlogin.auth.us-east-1.amazoncognito.com/login?client_id=1k0jj3tirau0ivhnh3ehh6cvlk&response_type=token&scope=openid+phone&redirect_uri=https://yuxluo.github.io/teamder/success.html">here</a> to sign in or sign up</p>
 </body>
 </html>
 
