--- a/success.html
+++ b/success.html
@@ -8,8 +8,7 @@
 
   
 <p><a href = "
-https://teamder.auth.us-east-1.amazoncognito.com/logout?client_id=5an2n7mfoe4ar3vjv2mi4uctbs&logout_uri=https://yuxluo.github.io/teamder/index.html">Log out</a></p>
-
+https://teamderlogin.auth.us-east-1.amazoncognito.com/login?client_id=1k0jj3tirau0ivhnh3ehh6cvlk&logout_uri=https://yuxluo.github.io/teamder/index.html">Log out</a></p>
   
 </body>
 </html>
