fixed return uri

--- a/success.html
+++ b/success.html
@@ -8,7 +8,7 @@
 
   
 <p><a href = "
-https://teamderlogin.auth.us-east-1.amazoncognito.com/login?client_id=1k0jj3tirau0ivhnh3ehh6cvlk&logout_uri=https://yuxluo.github.io/teamder/index.html">Log out</a></p>
+https://teamderlogin.auth.us-east-1.amazoncognito.com/login?client_id=1k0jj3tirau0ivhnh3ehh6cvlk&logout_uri=https://yuxluo.github.io/6998_project/index.html">Log out</a></p>
   
 </body>
 </html>
